--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
   <button id="stop">Stop</button>
   <button id="reset">Reset</button>
 
+  <!-- // this is copy paste related stuff -->
+  <textarea id="sourceTextarea" rows="4" cols="50">This is the text to copy and paste.</textarea> 
+  <button id="copy">Copy Text</button> 
+  <button id="paste">Paste Text</button>
+
   <script>
     let startTime = null;
     let elapsedTime = 0;
@@ -161,5 +166,6 @@
       timeDisplay.textContent = "00:00:00.000";
     });
   </script>
+  <!-- <script src="MethodsInJs.js"></script> -->
 </body>
 </html>
