--- a/index.html
+++ b/index.html
@@ -181,5 +181,6 @@
     }
   </script>
   <!-- <script src="MethodsInJs.js"></script> -->
+   <script src="/question.js"></script>
 </body>
 </html>
