--- a/index.html
+++ b/index.html
@@ -181,6 +181,6 @@
     }
   </script>
   <!-- <script src="MethodsInJs.js"></script> -->
-   <script src="/question.js"></script>
+   <script src="new.js"></script>
 </body>
 </html>
